--- a/button.html
+++ b/button.html
@@ -13,7 +13,7 @@
     <font color="#ffffff">In order to prevent abuse and make sure that users get the code, we have added Human Verification.</font>
     <br>
     <br>
-    <a id="verify" href="https://pisces.bbystatic.com/immage2/BestBuy_US/images/products/6251/6251044_sd.jpg" rel="nofollow noreferrer" target="_blank">
+    <a id="verify" href="https://www.youtube.com/4hadtech" rel="nofollow noreferrer" target="_blank">
     <button class="btn">VERIFY</button>
     </a>
 </center>
